--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- ==== aside start ==== -->
         <div class="aside">
            <div class="logo">
-            <a href="#"><span>A</span>tlas</a>
+            <a href="#"><span>G</span>uide</a>
            </div>
            <ul class="nav">
             <li><a href="#" class="active"><i class="fa fa-home"></i> Home</a></li>
