--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
            <div class="logo">
             <a href="#"><span>G</span>uide</a>
            </div>
+           <div class="nav-toggler">
+            <span>
+                
+            </span>
+           </div>
            <ul class="nav">
             <li><a href="#" class="active"><i class="fa fa-home"></i> Home</a></li>
             <li><a href="#"><i class="fa fa-user"></i> About</a></li>
