added picture working on design

--- a/index.html
+++ b/index.html
@@ -35,7 +35,19 @@
         <div class="main-contaner">
         <!-- === home section start === -->
          <section class="home section">
-            home
+            <div class="container">
+                <div class="row">
+                    <div class="home-info">
+                        <h3 class="hello">Hello, my name is <span class="name">Will Ray</span></h3>
+                        <h3 class="my-proffesion">I'm a <span class="typing">web developer</span></h3>
+                        <p>I'm a web developer with an expertise in client relationships. I'm experienced with JavaScript</p>
+                        <a href="#contact" class="btn hire-me">Hire Me</a>
+                    </div>
+                    <div class="home-img">
+                        <img src="images/Untitled design.jpg" alt="Picture of Will">
+                    </div>
+                </div>
+            </div>
          </section>
         <!-- ==== home section end ==== -->
         </div>
