finished home section

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
         <!--  ==== aside end ==== -->
         <!-- ==== main content start ==== -->
-        <div class="main-contaner">
+        <div class="main-content">
         <!-- === home section start === -->
          <section class="home section">
             <div class="container">
@@ -50,6 +50,8 @@
             </div>
          </section>
         <!-- ==== home section end ==== -->
+        <!-- ==== about section start ==== -->
+        <!-- ==== about section end ==== -->
         </div>
         <!-- === main container end === -->
 
