--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
          </section>
         <!-- ==== home section end ==== -->
         <!-- ==== about section start ==== -->
-        <section class="about section">
+        <section class="about section hidden">
             <div class="container">
                 <div class="row">
                     <div class="section-title padd-15">
@@ -222,6 +222,202 @@
             </div>
         </section>
         <!-- ==== about section end ==== -->
+        <!-- === services section start === -->
+        <section class="service section hidden">
+            <div class="container">
+                <div class="row">
+                    <div class="section-title padd-15">
+                        <h2>Services</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <!-- === Service item start === -->
+                    <div class="service-item padd-15">
+                        <div class="service-item-inner">
+                            <div class="icon">
+                                <i class="fa fa-mobile-alt"></i>
+                            </div>
+                            <h4>Web Design</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, dolores recusandae! Ipsum corrupti aliquam pariatur?</p>
+                        </div>
+                    </div>
+                    <!-- === Service item end === -->
+                   <!-- === Service item start === -->
+                    <div class="service-item padd-15">
+                        <div class="service-item-inner">
+                            <div class="icon">
+                                <i class="fa fa-laptop-code"></i>
+                            </div>
+                            <h4>Web Design</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, dolores recusandae! Ipsum corrupti aliquam pariatur?</p>
+                        </div>
+                    </div>
+                    <!-- === Service item end === -->
+                    <!-- === Service item start === -->
+                    <div class="service-item padd-15">
+                        <div class="service-item-inner">
+                            <div class="icon">
+                                <i class="fa fa-palette"></i>
+                            </div>
+                            <h4>Web Design</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, dolores recusandae! Ipsum corrupti aliquam pariatur?</p>
+                        </div>
+                    </div>
+                    <!-- === Service item end === -->
+                    <!-- === Service item start === -->
+                    <div class="service-item padd-15">
+                        <div class="service-item-inner">
+                            <div class="icon">
+                                <i class="fa fa-code"></i>
+                            </div>
+                            <h4>Web Design</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, dolores recusandae! Ipsum corrupti aliquam pariatur?</p>
+                        </div>
+                    </div>
+                    <!-- === Service item end === -->
+                    <!-- === Service item start === -->
+                    <div class="service-item padd-15">
+                        <div class="service-item-inner">
+                            <div class="icon">
+                                <i class="fa fa-search"></i>
+                            </div>
+                            <h4>Web Design</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, dolores recusandae! Ipsum corrupti aliquam pariatur?</p>
+                        </div>
+                    </div>
+                    <!-- === Service item end === -->
+                    <!-- === Service item start === -->
+                    <div class="service-item padd-15">
+                        <div class="service-item-inner">
+                            <div class="icon">
+                                <i class="fa fa-bullhorn"></i>
+                            </div>
+                            <h4>Web Design</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, dolores recusandae! Ipsum corrupti aliquam pariatur?</p>
+                        </div>
+                    </div>
+                    <!-- === Service item end === -->
+
+                </div>
+            </div>
+        </section>
+        <!-- === services section end === -->
+        <!-- === Portfolio section start === -->
+         <section class="portfolio section hidden">
+            <div class="container">
+                 <div class="row">
+                    <div class="section-title padd-15">
+                        <h2>Portfolio</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="portfolio-heading padd-15">
+                        <h2>My Recent Projects :</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <!-- === portfolio item start === -->
+                    <div class="portfolio-item padd-15">
+                        <div class="portfolio-item-inner shadow-dark">
+                            <div class="portfolio-img">
+                                <img src="images/Screenshot (4).png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <!-- === portfolio item end === -->
+                    <!-- === portfolio item start === -->
+                    <div class="portfolio-item padd-15">
+                        <div class="portfolio-item-inner shadow-dark">
+                            <div class="portfolio-img">
+                                <img src="images/Screenshot (4).png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <!-- === portfolio item end === -->
+                    <!-- === portfolio item start === -->
+                    <div class="portfolio-item padd-15">
+                        <div class="portfolio-item-inner shadow-dark">
+                            <div class="portfolio-img">
+                                <img src="images/Screenshot (4).png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <!-- === portfolio item end === -->
+                    <!-- === portfolio item start === -->
+                    <div class="portfolio-item padd-15">
+                        <div class="portfolio-item-inner shadow-dark">
+                            <div class="portfolio-img">
+                                <img src="images/Screenshot (4).png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <!-- === portfolio item end === -->
+                    <!-- === portfolio item start === -->
+                    <div class="portfolio-item padd-15">
+                        <div class="portfolio-item-inner shadow-dark">
+                            <div class="portfolio-img">
+                                <img src="images/Screenshot (4).png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <!-- === portfolio item end === -->
+                    <!-- === portfolio item start === -->
+                    <div class="portfolio-item padd-15">
+                        <div class="portfolio-item-inner shadow-dark">
+                            <div class="portfolio-img">
+                                <img src="images/Screenshot (4).png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <!-- === portfolio item end === -->
+                    
+                </div>
+            </div>
+         </section>
+        <!-- === Portfolio section end === -->
+        <!-- === Contact section start === -->
+        <section class="contact section">
+            <div class="container">
+                <div class="row">
+                    <div class="section-title padd-15">
+                        <h2>Contact Me</h2>
+                    </div>
+                </div>
+                <h3 class="contact-title">Have Any Questions?</h3>
+                <h4 class="contact-sub-title">I'M AT YOUR SERVICE</h4>
+                <div class="row">
+                    <!-- === Contact info item start === -->
+                    <div class="contact-info-item padd-15">
+                        <div class="icon"><i class="fa fa-phone"></i></div>
+                        <h4>Call Me</h4>
+                        <p>513-111-1111</p>
+                    </div>
+                    <!-- === Contact info item end === -->
+                    <!-- === Contact info item start === -->
+                    <div class="contact-info-item padd-15">
+                        <div class="icon"><i class="fa fa-envelope"></i></div>
+                        <h4>Email</h4>
+                        <p>thetechdad87@gmail.com</p>
+                    </div>
+                    <!-- === Contact info item end === -->
+                    <!-- === Contact info item start === -->
+                    <div class="contact-info-item padd-15">
+                        <div class="icon"><i class="fa fa-globe-americas"></i></div>
+                        <h4>website</h4>
+                        <p>www.findingpeoplesolutions.com</p>
+                    </div>
+                    <!-- === Contact info item end === -->
+                    <!-- === Contact info item start === -->
+                    <div class="contact-info-item padd-15">
+                        <div class="icon"><i class="fa fa-video-camera"></i></div>
+                        <h4>Watch Me</h4>
+                        <p>@the_tech_dad87</p>
+                    </div>
+                    <!-- === Contact info item end === -->
+                </div>
+            </div>
+        </section>
+        <!-- === Contact section end === -->
         </div>
         <!-- === main container end === -->
 
