--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <div class="home-info padd-15">
                         <h3 class="hello">Hello, my name is <span class="name">William Ray</span></h3>
                         <h3 class="my-proffesion">I'm a <span class="typing">web developer</span></h3>
-                        <p>I'm a web developer with an expertise in client relationships. I'm experienced with JavaScript</p>
+                        <p>I'm a web developer with an expertise in client relationships. I'm experienced with HTML, CSS, JavaScript and Node.JS</p>
                         <a href="#contact" class="btn hire-me">Hire Me</a>
                     </div>
                     <div class="home-img padd-15">
@@ -83,7 +83,7 @@
                                     <p>Age : <span>35 </span></p>
                                 </div>
                                 <div class="info-item padd-15">
-                                    <p>Website : <span>findingpeoplesolutions.com</span></p>
+                                    <p>Website : <a href="https://findingpeoplesolutions.com/"><span>findingpeoplesolutions.com</span></a></p>
                                 </div>
                                 <div class="info-item padd-15">
                                     <p>Email : <span>thetechdad87@gmail.com</span></p>
@@ -328,7 +328,7 @@
                     <div class="portfolio-item padd-15">
                         <div class="portfolio-item-inner shadow-dark">
                             <div class="portfolio-img">
-                                <img src="images/Screenshot (4).png" alt="">
+                                <a href="https://rad-custard-30bd3c.netlify.app/"><img src="images/Screenshot (4).png" alt="simone game"></a>
                             </div>
                         </div>
                     </div>
@@ -337,7 +337,7 @@
                     <div class="portfolio-item padd-15">
                         <div class="portfolio-item-inner shadow-dark">
                             <div class="portfolio-img">
-                                <img src="images/Screenshot (4).png" alt="">
+                                <a href="https://fantastic-travesseiro-e7a9b1.netlify.app/"><img src="images/Screenshot (5).png" alt=""></a>
                             </div>
                         </div>
                     </div>
@@ -346,7 +346,7 @@
                     <div class="portfolio-item padd-15">
                         <div class="portfolio-item-inner shadow-dark">
                             <div class="portfolio-img">
-                                <img src="images/Screenshot (4).png" alt="">
+                                <a href="https://singular-scone-08645a.netlify.app/"><img src="images/Screenshot (6).png" alt=""></a>
                             </div>
                         </div>
                     </div>
@@ -355,28 +355,28 @@
                     <div class="portfolio-item padd-15">
                         <div class="portfolio-item-inner shadow-dark">
                             <div class="portfolio-img">
-                                <img src="images/Screenshot (4).png" alt="">
+                                <a href="https://ephemeral-maamoul-bd5ca3.netlify.app/"><img src="images/Screenshot (7).png" alt=""></a>
                             </div>
                         </div>
                     </div>
                     <!-- === portfolio item end === -->
                     <!-- === portfolio item start === -->
-                    <div class="portfolio-item padd-15">
+                    <!-- <div class="portfolio-item padd-15">
                         <div class="portfolio-item-inner shadow-dark">
                             <div class="portfolio-img">
                                 <img src="images/Screenshot (4).png" alt="">
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- === portfolio item end === -->
                     <!-- === portfolio item start === -->
-                    <div class="portfolio-item padd-15">
+                    <!-- <div class="portfolio-item padd-15">
                         <div class="portfolio-item-inner shadow-dark">
                             <div class="portfolio-img">
                                 <img src="images/Screenshot (4).png" alt="">
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- === portfolio item end === -->
                     
                 </div>
@@ -398,7 +398,7 @@
                     <div class="contact-info-item padd-15">
                         <div class="icon"><i class="fa fa-phone"></i></div>
                         <h4>Call Me</h4>
-                        <p>513-111-1111</p>
+                        <p>111-111-1111</p>
                     </div>
                     <!-- === Contact info item end === -->
                     <!-- === Contact info item start === -->
@@ -412,19 +412,20 @@
                     <div class="contact-info-item padd-15">
                         <div class="icon"><i class="fa fa-globe-americas"></i></div>
                         <h4>website</h4>
-                        <p>findingpeoplesolutions.com</p>
+                        <a href="https://findingpeoplesolutions.com/"><p>findingpeoplesolutions.com</p></a>
                     </div>
                     <!-- === Contact info item end === -->
                     <!-- === Contact info item start === -->
                     <div class="contact-info-item padd-15">
                         <div class="icon"><i class="fa fa-video-camera"></i></div>
                         <h4>Watch Me</h4>
-                        <p>@the_tech_dad87</p>
+                        <a href="https://www.youtube.com/channel/UCjV0wdH89M-Cq7yO2v2rIvw"><p>@the_tech_dad87</p></a>
                     </div>
                     <!-- === Contact info item end === -->
                 </div>
                 <h3 class="contact-title padd-15">SEND ME AN EMAIL</h3>
                 <!-- === cONTACT FORM === -->
+                <form action="mailto:thetechdad87@gmail.com">
                 <div class="row">
                     <div class="contact-form padd-15">
                         <div class="row">
@@ -460,6 +461,7 @@
                         </div>
                     </div>
                 </div>
+                </form>
             </div>
         </section>
         <!-- === Contact section end === -->
