--- a/index.html
+++ b/index.html
@@ -361,13 +361,13 @@
                     </div>
                     <!-- === portfolio item end === -->
                     <!-- === portfolio item start === -->
-                    <!-- <div class="portfolio-item padd-15">
+                    <div class="portfolio-item padd-15">
                         <div class="portfolio-item-inner shadow-dark">
                             <div class="portfolio-img">
-                                <img src="images/Screenshot (4).png" alt="">
+                                <a href="https://will513r.github.io/"></a><img src="images/Screenshot (8).png" alt="">
                             </div>
                         </div>
-                    </div> -->
+                    </div>
                     <!-- === portfolio item end === -->
                     <!-- === portfolio item start === -->
                     <!-- <div class="portfolio-item padd-15">
