--- a/index.html
+++ b/index.html
@@ -366,13 +366,13 @@
                     </div>
                     <!-- === portfolio item end === -->
                     <!-- === portfolio item start === -->
-                    <div class="portfolio-item padd-15">
+                    <!-- <div class="portfolio-item padd-15">
                         <div class="portfolio-item-inner shadow-dark">
                             <div class="portfolio-img">
                                 <a href="https://ephemeral-maamoul-bd5ca3.netlify.app/"><img src="images/Screenshot (7).png" alt=""></a>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- === portfolio item end === -->
                     <!-- === portfolio item start === -->
                     <div class="portfolio-item padd-15">
@@ -410,9 +410,9 @@
                 <div class="row">
                     <!-- === Contact info item start === -->
                     <div class="contact-info-item padd-15">
-                        <div class="icon"><i class="fa fa-phone"></i></div>
-                        <h4>Call Me</h4>
-                        <p>111-111-1111</p>
+                        <div class="icon"><i class="fa fa-linkedin"></i></div>
+                        <h4>Linkedin</h4>
+                        <a href="https://www.linkedin.com/in/william-ray-55493a179/"><p>Connect</p></a>
                     </div>
                     <!-- === Contact info item end === -->
                     <!-- === Contact info item start === -->
@@ -425,8 +425,8 @@
                     <!-- === Contact info item start === -->
                     <div class="contact-info-item padd-15">
                         <div class="icon"><i class="fa fa-globe-americas"></i></div>
-                        <h4>website</h4>
-                        <a href="https://findingpeoplesolutions.com/"><p>findingpeoplesolutions.com</p></a>
+                        <h4>GitHub</h4>
+                        <a href="https://github.com/Will513r"><p>My GitHub</p></a>
                     </div>
                     <!-- === Contact info item end === -->
                     <!-- === Contact info item start === -->
@@ -442,7 +442,7 @@
                 <form action="mailto:thetechdad87@gmail.com">
                 <div class="row">
                     <div class="contact-form padd-15">
-                        <div class="row">
+                        <!-- <div class="row">
                             <div class="form-item col-6 padd-15">
                                 <div class="form-group">
                                     <input type="text" class="form-control" placeholder="Name">
@@ -453,7 +453,7 @@
                                     <input type="email" class="form-control" placeholder="Email">
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="row">
                             <div class="form-item col-12 padd-15">
                                 <div class="form-group">
