--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>My Page</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/skins/color1.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"> -->
 
     <!--===== Style Switcher ==== -->
     <link rel="stylesheet" href="css/skins/color1.css" class="alternate-style" title="color-1" disabled>
@@ -446,7 +446,7 @@
     </div>
     <!-- === Style Switch end === -->
     <!-- === JS files === -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js" referrerpolicy="no-referrer"></script>
+    <script src="https://kit.fontawesome.com/bb336e984f.js" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
     <script src="js/style-switcher.js"></script>
 </body>
