fixed github io not linking
I put the closing anchor tag in wrong place :(

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                     <div class="portfolio-item padd-15">
                         <div class="portfolio-item-inner shadow-dark">
                             <div class="portfolio-img">
-                                <a href="https://will513r.github.io/"></a><img src="images/Screenshot (8).png" alt="">
+                                <a href="https://will513r.github.io/"><img src="images/Screenshot (8).png" alt=""></a>
                             </div>
                         </div>
                     </div>
@@ -396,13 +396,7 @@
                                 </div>
                             </div>
                         </div> -->
-                        <div class="row">
-                            <div class="form-item col-12 padd-15">
-                                <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Subject">
-                                </div>
-                            </div>
-                        </div>
+                       
                         <div class="row">
                             <div class="form-item col-12 padd-15">
                                 <div class="form-group">
