--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <div class="home-info padd-15">
                         <h3 class="hello">Hello, my name is <span class="name">William Ray</span></h3>
                         <h3 class="my-proffesion">I'm a <span class="typing">web developer</span></h3>
-                        <p>I'm a web developer with an expertise in client relationships. Check out my theme colors and check out my website. Thanks for stopping by</p>
+                        <p> with an expertise in client relationships. Check out my theme colors and check out my website. Thanks for stopping by</p>
                         <a href="#contact" class="btn hire-me">Hire Me</a>
                     </div>
                     <div class="home-img padd-15">
