--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                                         <div class="timeline-item">
                                             <div class="circle-dot"></div>
                                                 <h3 class="timeline-date">
-                                                    <i class="fa fa-calendar"></i> 2022 - 2023
+                                                    <i class="fa fa-calendar"></i> 2023 - present
                                                 </h3>
                                                 <h4 class="timeline-title">Web Developer - Freelance</h4>
                                                 <p class="timeline-text">Demonstrated expertise in HTML, CSS, and JavaScript through 
@@ -210,27 +210,34 @@
                                         <div class="timeline-item">
                                             <div class="circle-dot"></div>
                                                 <h3 class="timeline-date">
-                                                    <i class="fa fa-calendar"></i> 2022 - 2023
+                                                    <i class="fa fa-calendar"></i> 2022 2023
                                                 </h3>
-                                                <h4 class="timeline-title">Web Developer </h4>
-                                                <p class="timeline-text">Currently enrolled in a full-stack web development bootcamp program with a
-                                                     strong emphasis on building dynamic and responsive web applications using HTML, CSS, JavaScript,
-                                                      React, Node.js, and MongoDB. Expected to complete late march, have gained hands-on experience in developing various projects such as a BMI calculator and personal website, and have demonstrated a strong understanding of full-stack web development concepts. Acquiring valuable experience
-                                                     in agile methodologies, project management, and teamwork through collaborative project-based learning.</p>
+                                                <h4 class="timeline-title">Operations Director - Firsthand Health </h4>
+                                                <p class="timeline-text">Manage financial resources and cultivate strong connections with community stakeholders and resources to ensure a comprehensive and effective directory
+
+Establishing and nurturing partnerships with local companies to cultivate and maintain positive business relationships.
+
+Act as a player-coach, engaging in outreach activities with the Guides team, facilitating access to community resources and services like SSA benefits, housing, food, and other support programs.
+
+Offer clinical guidance to staff pursuing licensure when needed. Foster an inclusive and equitable workplace for a diverse team.</p>
                                             
                                         </div>
                                          <!-- === timeline item === -->
                                         <div class="timeline-item">
                                             <div class="circle-dot"></div>
                                                 <h3 class="timeline-date">
-                                                    <i class="fa fa-calendar"></i> 2020 - 2023
+                                                    <i class="fa fa-calendar"></i> 2020 - 2022
                                                 </h3>
-                                                <h4 class="timeline-title">Housing Program Supervisor - Decoach Rehab</h4>
-                                                <p class="timeline-text">Coached team members on productivity strategies to accomplish challenging goals.
-                                                Organized and managed program development from conception through successful execution
-                                                Orchestrated smooth and efficient program development by collaborating cross functionally across departments
-                                                Directed team of 10 personnel, overseeing records, performance and quality assurance.
-                                                Provided ongoing direction and leadership for program operations</p>
+                                                <h4 class="timeline-title">Housing Program Director - Decoach Rehab Center</h4>
+                                                <p class="timeline-text">Provided professional coaching to team members, enabling them to implement effective productivity strategies to achieve ambitious objectives.
+
+Led and oversaw comprehensive program development from inception to successful implementation.
+
+Orchestrated smooth and efficient program development by collaborating cross functionally across departments
+
+Directed team of 25 personnel, 60 clients, overseeing records, performance and quality assurance.
+
+Offered continuous guidance and leadership in overseeing program operations.</p>
                                             
                                         </div>
                                     </div>
@@ -282,6 +289,9 @@
                 <div class="row">
                     <!-- === portfolio item start === -->
                     <div class="portfolio-item padd-15">
+                        <div class="portfolio-heading padd-15">
+                        <h2>Simon Game</h2>
+                    </div>
                         <div class="portfolio-item-inner shadow-dark">
                             <div class="portfolio-img">
                                 <a href="https://rad-custard-30bd3c.netlify.app/"><img src="images/Screenshot (4).png" alt="simone game"></a>
@@ -291,6 +301,9 @@
                     <!-- === portfolio item end === -->
                     <!-- === portfolio item start === -->
                     <div class="portfolio-item padd-15">
+                        <div class="portfolio-heading padd-15">
+                        <h2>Dice Game</h2>
+                    </div>
                         <div class="portfolio-item-inner shadow-dark">
                             <div class="portfolio-img">
                                 <a href="https://fantastic-travesseiro-e7a9b1.netlify.app/"><img src="images/Screenshot (5).png" alt=""></a>
@@ -300,9 +313,12 @@
                     <!-- === portfolio item end === -->
                     <!-- === portfolio item start === -->
                     <div class="portfolio-item padd-15">
+                        <div class="portfolio-heading padd-15">
+                        <h2>Calculator</h2>
+                    </div>
                         <div class="portfolio-item-inner shadow-dark">
                             <div class="portfolio-img">
-                                <a href="https://singular-scone-08645a.netlify.app/"><img src="images/Screenshot (6).png" alt=""></a>
+                                <a href="https://willscalculator.netlify.app/"><img src="images/calc.png" alt=""></a>
                             </div>
                         </div>
                     </div>
@@ -318,9 +334,12 @@
                     <!-- === portfolio item end === -->
                     <!-- === portfolio item start === -->
                     <div class="portfolio-item padd-15">
+                        <div class="portfolio-heading padd-15">
+                        <h2>Local Business page</h2>
+                    </div>
                         <div class="portfolio-item-inner shadow-dark">
                             <div class="portfolio-img">
-                                <a href="https://will513r.github.io/"><img src="images/Screenshot (8).png" alt=""></a>
+                                <a href="https://stayinggreen.netlify.app/"><img src="images/stayinggreen.png" alt=""></a>
                             </div>
                         </div>
                     </div>
