--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <!-- ==== aside start ==== -->
         <div class="aside">
            <div class="logo">
-            <a href="#"><span>G</span>uide</a>
+            <a href="#">Guide</a>
            </div>
            <div class="nav-toggler">
             <span>
@@ -47,7 +47,7 @@
                 <div class="row">
                     <div class="home-info padd-15">
                         <h3 class="hello">Hello, my name is <span class="name">William Ray</span></h3>
-                        <h3 class="my-proffesion">I'm a <span class="typing">web developer</span></h3>
+                        <h3 class="my-proffesion">I'm a <span class="typing">Web Developer</span></h3>
                         <p> with an expertise in client relationships. Check out my theme colors and check out my website. Thanks for stopping by</p>
                         <a href="#contact" class="btn hire-me">Hire Me</a>
                     </div>
@@ -460,6 +460,7 @@ Offered continuous guidance and leadership in overseeing program operations.</p>
     <!-- === Style Switch end === -->
     <!-- === JS files === -->
     <script src="https://kit.fontawesome.com/bb336e984f.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script src="js/main.js"></script>
     <script src="js/style-switcher.js"></script>
 </body>
