trying to secure form

--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
             </div>
             <h3 class="contact-title padd-15">SEND ME AN EMAIL</h3>
             <!-- === cONTACT FORM === -->
-            <form action="mailto:thetechdad87@gmail.com">
+            <form method="post" netlify data-netlify-success="/thank-you.html" action="mailto:thetechdad87@gmail.com">
               <div class="row">
                 <div class="contact-form padd-15">
                   <!-- <div class="row">
