--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
                             </div>
                         </div> -->
 
-                  <div class="row">
+                  <!-- <div class="row">
                     <div class="form-item col-12 padd-15">
                       <div class="form-group">
                         <textarea
@@ -523,10 +523,10 @@
                         ></textarea>
                       </div>
                     </div>
-                  </div>
+                  </div> -->
                   <div class="row">
                     <div class="form-item col-12 padd-15">
-                      <button type="submit" class="btn">Send Message</button>
+                      <button type="submit" id="email" class="btn">Send Message</button>
                     </div>
                   </div>
                 </div>
