--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                             <h4 class="timeline-title">
                               Fullstack Web developer Bootcamp
                             </h4>
-                            <p class="timeline-text">The App Brewery</p>
+                            <p class="timeline-text">Tech Elevator</p>
                           </div>
                           <!-- === timeline item=== -->
                           <div class="timeline-item">
@@ -265,7 +265,7 @@
                             <p class="timeline-text">
                               Demonstrated expertise in HTML, CSS, and
                               JavaScript through freelance web development
-                              projects for two local businesses. Developed
+                              projects for local businesses. Developed
                               custom websites, implementing visually appealing
                               designs and ensuring a seamless user experience.
                               Utilized HTML and CSS for website structure and
