--- a/index.html
+++ b/index.html
@@ -112,14 +112,10 @@
                   <div class="about-text padd-15">
                     <h3>I'm Will a <span>Web developer</span></h3>
                     <p>
-                      Operations Director in healthcare transitioning to
-                      software development. Proven expertise in optimizing
-                      complex processes, leading teams, and strategic planning.
-                      Eager to apply transferable skills like problem-solving
-                      and team leadership to excel in coding, software
-                      architecture, and innovative solutions. Committed to
-                      learning and contributing in the dynamic realm of software
-                      development.
+                      Experienced Healthcare Operations Director transitioning to software development. Proven success in project management, 
+                       team leadership, and strategic execution of complex initiatives. Eager to transfer problem-solving, communication, 
+                       and leadership skills to succeed in coding, software architecture, 
+                      and building innovative solutions. Passionate about learning and impacting the software development field.
                     </p>
                   </div>
                 </div>
