Updating and fixing bugs

--- a/index.html
+++ b/index.html
@@ -112,10 +112,14 @@
                   <div class="about-text padd-15">
                     <h3>I'm Will a <span>Web developer</span></h3>
                     <p>
-                      Experienced Healthcare Operations Director transitioning to software development. Proven success in project management, 
-                       team leadership, and strategic execution of complex initiatives. Eager to transfer problem-solving, communication, 
-                       and leadership skills to succeed in coding, software architecture, 
-                      and building innovative solutions. Passionate about learning and impacting the software development field.
+                      Experienced Healthcare Operations Director transitioning
+                      to software development. Proven success in project
+                      management, team leadership, and strategic execution of
+                      complex initiatives. Eager to transfer problem-solving,
+                      communication, and leadership skills to succeed in coding,
+                      software architecture, and building innovative solutions.
+                      Passionate about learning and impacting the software
+                      development field.
                     </p>
                   </div>
                 </div>
@@ -164,7 +168,7 @@
                         <p>CSS</p>
                       </div>
                       <div class="info-item padd-15">
-                        <p>React</p>
+                        <p>Java</p>
                       </div>
                       <div class="info-item padd-15">
                         <p>JavaScript</p>
@@ -176,13 +180,28 @@
                         <p>Bootstrap</p>
                       </div>
                       <div class="info-item padd-15">
-                        <p>Version Control</p>
+                        <p>SQL</p>
                       </div>
                       <div class="info-item padd-15">
-                        <p>node.js</p>
+                        <p>Node.JS</p>
                       </div>
                       <div class="info-item padd-15">
                         <p>Git & Git Hub</p>
+                      </div>
+                      <div class="info-item padd-15">
+                        <p>Vue</p>
+                      </div>
+                      <div class="info-item padd-15">
+                        <p>Unit Testing</p>
+                      </div>
+                      <div class="info-item padd-15">
+                        <p>PostgreSQL</p>
+                      </div>
+                      <div class="info-item padd-15">
+                        <p>Integration Testing</p>
+                      </div>
+                      <div class="info-item padd-15">
+                        <p>Web Services API</p>
                       </div>
                     </div>
                   </div>
@@ -197,11 +216,11 @@
                           <div class="timeline-item">
                             <div class="circle-dot"></div>
                             <h3 class="timeline-date">
-                              <i class="fa fa-calendar"></i> 2022-Currently
+                              <i class="fa fa-calendar"></i> 2024-Currently
                               enrolled
                             </h3>
                             <h4 class="timeline-title">
-                              Fullstack Web developer Bootcamp
+                              Fullstack Java Developer Bootcamp
                             </h4>
                             <p class="timeline-text">Tech Elevator</p>
                           </div>
@@ -209,8 +228,7 @@
                           <div class="timeline-item">
                             <div class="circle-dot"></div>
                             <h3 class="timeline-date">
-                              <i class="fa fa-calendar"></i> 2023-Currently
-                              enrolled
+                              <i class="fa fa-calendar"></i> 2024
                             </h3>
                             <h4 class="timeline-title">
                               Cert in JavaScript Algorithms and Data Structures
@@ -221,7 +239,7 @@
                           <div class="timeline-item">
                             <div class="circle-dot"></div>
                             <h3 class="timeline-date">
-                              <i class="fa fa-calendar"></i> 2022
+                              <i class="fa fa-calendar"></i> 2023
                             </h3>
                             <h4 class="timeline-title">
                               Cert in responsive web design
@@ -249,6 +267,28 @@
                     <div class="row">
                       <div class="timeline-box padd-15">
                         <div class="timeline shadow-dark">
+                          <!-- === timeline item === -->
+                          <div class="timeline-item">
+                            <div class="circle-dot"></div>
+                            <h3 class="timeline-date">
+                              <i class="fa fa-calendar"></i> 2024
+                            </h3>
+                            <h4 class="timeline-title">
+                              Java Development Bootcamp Student - Tech Elevator
+                            </h4>
+                            <p class="timeline-text">
+                              A full stack Java coding bootcamp to learn how to
+                              develop dynamic web-based software systems using
+                              the Java programming language and platform with
+                              800+ hours of lecture and application including:
+                              Object-Oriented Programming: Java Web Application
+                              Development: HTML, CSS, JavaScript, Spring Boot,
+                              Vue.js Database Programming: JDBC, Table Design,
+                              SQL, PostgreSQL, E/R diagrams Development Tools
+                              and Techniques: Agile, Unit Testing (JUnit),
+                              Integration Testing, Git, IntelliJ
+                            </p>
+                          </div>
                           <!-- === timeline item=== -->
                           <div class="timeline-item">
                             <div class="circle-dot"></div>
@@ -261,11 +301,11 @@
                             <p class="timeline-text">
                               Demonstrated expertise in HTML, CSS, and
                               JavaScript through freelance web development
-                              projects for local businesses. Developed
-                              custom websites, implementing visually appealing
-                              designs and ensuring a seamless user experience.
-                              Utilized HTML and CSS for website structure and
-                              styling, and JavaScript for dynamic features and
+                              projects for local businesses. Developed custom
+                              websites, implementing visually appealing designs
+                              and ensuring a seamless user experience. Utilized
+                              HTML and CSS for website structure and styling,
+                              and JavaScript for dynamic features and
                               interactions. Delivered high-quality websites that
                               accurately reflect the clients' brand and enhance
                               their online presence. Worked independently and
@@ -274,6 +314,38 @@
                             </p>
                           </div>
 
+                          <!-- === timeline item === -->
+                          <div class="timeline-item">
+                            <div class="circle-dot"></div>
+                            <h3 class="timeline-date">
+                              <i class="fa fa-calendar"></i> 2023 2024
+                            </h3>
+                            <h4 class="timeline-title">
+                              Director of Client Services - Legacy Healing
+                              Center
+                            </h4>
+                            <p class="timeline-text">
+                              Led and trained a team of 55+ BHTs and 20
+                              Supervisors, fostering their success through
+                              dedicated support. Managed maintenance,
+                              cleanliness, and safety across 4 houses, 25
+                              apartment units, and 10 vehicles. Introduced
+                              automated data collection systems, enabling
+                              targeted improvements in operational efficiency.
+                              Demonstrated strong communication, observational,
+                              and written skills, showcasing proficiency in
+                              conveying information effectively. In-depth
+                              knowledge of State and Federal statutes related to
+                              patient confidentiality laws, ensuring adherence
+                              to legal and ethical standards in healthcare.
+                              Expertise in addiction-related matters, including
+                              knowledge of the 12-Step Recovery Program, ability
+                              to interact within a multidisciplinary team, and
+                              competence in handling various aspects of recovery
+                              programs, emphasising physical health and holistic
+                              well-being
+                            </p>
+                          </div>
                           <!-- === timeline item === -->
                           <div class="timeline-item">
                             <div class="circle-dot"></div>
@@ -482,19 +554,20 @@
               <!-- === Contact info item end === -->
               <!-- === Contact info item start === -->
               <div class="contact-info-item padd-15">
-                <div class="icon"><i class="fa fa-video-camera"></i></div>
                 <a
                   href="https://www.youtube.com/channel/UCjV0wdH89M-Cq7yO2v2rIvw"
-                  ><h4>Watch Me on Youtube</h4></a
-                >
+                  >
+                <div class="icon"><i class="fa fa-video-camera"></i></div></a>
+                <h4>Watch Me on Youtube</h4>
+                
               </div>
               <!-- === Contact info item end === -->
             </div>
-            <h3 class="contact-title padd-15">SEND ME AN EMAIL</h3>
-            <!-- === cONTACT FORM === -->
+            <!-- <h3 class="contact-title padd-15">SEND ME AN EMAIL</h3>
+            === cONTACT FORM ===
             <form method="post" action="mailto:thetechdad87@gmail.com">
               <div class="row">
-                <div class="contact-form padd-15">
+                <div class="contact-form padd-15"> -->
                   <!-- <div class="row">
                             <div class="form-item col-6 padd-15">
                                 <div class="form-group">
@@ -520,11 +593,13 @@
                       </div>
                     </div>
                   </div> -->
-                  <div class="row">
+                  <!-- <div class="row">
                     <div class="form-item col-12 padd-15">
-                      <button type="submit" id="email" class="btn">Send Message</button>
+                      <button type="submit" id="email" class="btn">
+                        Send Message
+                      </button>
                     </div>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </form>
