spelling issues I dont know english

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <!-- ==== aside start ==== -->
       <div class="aside">
         <div class="logo">
-          <a href="#">Guide</a>
+          <a href="#">Menu</a>
         </div>
         <div class="nav-toggler">
           <span> </span>
@@ -255,7 +255,7 @@
                             </h3>
                             <h4 class="timeline-title">Cert in IT Support</h4>
                             <p class="timeline-text">
-                              Google IT Support through corsera
+                              Google IT Support through Coursera
                             </p>
                           </div>
                         </div>
@@ -342,7 +342,7 @@
                               knowledge of the 12-Step Recovery Program, ability
                               to interact within a multidisciplinary team, and
                               competence in handling various aspects of recovery
-                              programs, emphasising physical health and holistic
+                              programs, emphasizing physical health and holistic
                               well-being
                             </p>
                           </div>
