--- a/index.html
+++ b/index.html
@@ -112,14 +112,7 @@
                   <div class="about-text padd-15">
                     <h3>I'm Will a <span>Web developer</span></h3>
                     <p>
-                      Experienced Healthcare Operations Director transitioning
-                      to software development. Proven success in project
-                      management, team leadership, and strategic execution of
-                      complex initiatives. Eager to transfer problem-solving,
-                      communication, and leadership skills to succeed in coding,
-                      software architecture, and building innovative solutions.
-                      Passionate about learning and impacting the software
-                      development field.
+                     Highly motivated and results-oriented professional with experience leading teams and managing programs.  Proven leader with strong communication skills, building consensus and contributing to a collaborative team environment.  Seeking to leverage strong analytical and problem-solving skills in a software development career. 
                     </p>
                   </div>
                 </div>
@@ -129,9 +122,9 @@
                     <div class="row">
                       <div class="info-item padd-15">
                         <p>
-                          Website :
-                          <a href="https://findingpeoplesolutions.com/"
-                            ><span>findingpeoplesolutions.com</span></a
+                          Watch me on Youtube :
+                          <a href="https://www.youtube.com/channel/UCjV0wdH89M-Cq7yO2v2rIvw"
+                            ><span>The Tech Dad</span></a
                           >
                         </p>
                       </div>
