--- a/index.html
+++ b/index.html
@@ -88,11 +88,12 @@
                 <h3 class="my-proffesion">
                   I'm a <span class="typing">Web Developer</span>
                 </h3>
+                <p></p>
                 <p>Scroll down to learn more.</p>
                 <a href="#contact" class="btn hire-me">Hire Me</a>
               </div>
               <div class="home-img padd-15">
-                <img src="images/Untitled design.jpg" alt="Picture of Will" />
+                <img src="images/Will.png" alt="Picture of Will" />
               </div>
             </div>
           </div>
@@ -112,7 +113,10 @@
                   <div class="about-text padd-15">
                     <h3>I'm Will a <span>Web developer</span></h3>
                     <p>
-                     Highly motivated and results-oriented professional with experience leading teams and managing programs.  Proven leader with strong communication skills, building consensus and contributing to a collaborative team environment.  Seeking to leverage strong analytical and problem-solving skills in a software development career. 
+                     Highly motivated and results-oriented professional with experience leading teams and managing 
+programs. Proven leader with strong communication skills, building consensus and contributing to 
+a collaborative team environment. Seeking to leverage strong analytical, problem-solving skills and 
+experience with personal full-stack applications in a software development career. . 
                     </p>
                   </div>
                 </div>
