--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
   <body>
     <!-- ====  main container start ===== -->
     <div class="main-container">
-      <!-- ==== aside start ==== -->
-      <div class="aside">
+      <!-- ==== menu start ==== -->
+      <div class="menu">
         <div class="logo">
-          <a href="#">Menu</a>
+          <a href="#">TTD</a>
         </div>
         <div class="nav-toggler">
           <span> </span>
@@ -74,7 +74,7 @@
           </li>
         </ul>
       </div>
-      <!--  ==== aside end ==== -->
+      <!--  ==== menu end ==== -->
       <!-- ==== main content start ==== -->
       <div class="main-content">
         <!-- === home section start === -->
@@ -90,7 +90,7 @@
                 </h3>
                 <p></p>
                 <p>Scroll down to learn more.</p>
-                <a href="#contact" class="btn hire-me">Hire Me</a>
+                <!-- <a href="#contact" class="btn hire-me">Hire Me</a> -->
               </div>
               <div class="home-img padd-15">
                 <img src="images/Will.png" alt="Picture of Will" />
@@ -113,10 +113,7 @@
                   <div class="about-text padd-15">
                     <h3>I'm Will a <span>Web developer</span></h3>
                     <p>
-                     Highly motivated and results-oriented professional with experience leading teams and managing 
-programs. Proven leader with strong communication skills, building consensus and contributing to 
-a collaborative team environment. Seeking to leverage strong analytical, problem-solving skills and 
-experience with personal full-stack applications in a software development career. . 
+                     Hi! I'm Will, a software developer passionate about building apps and websites that are both beautiful and functional. But when I'm not coding, you can find me sharing my knowledge and experiences on my YouTube channel, The Tech Dad. Feel free to check out my projects, connect with me, or explore some of my videos!
                     </p>
                   </div>
                 </div>
@@ -126,7 +123,7 @@ experience with personal full-stack applications in a software development caree
                     <div class="row">
                       <div class="info-item padd-15">
                         <p>
-                          Watch me on Youtube :
+                          Watch me on Youtube:
                           <a href="https://www.youtube.com/channel/UCjV0wdH89M-Cq7yO2v2rIvw"
                             ><span>The Tech Dad</span></a
                           >
@@ -148,6 +145,8 @@ experience with personal full-stack applications in a software development caree
                         <p>Location : <span>Cincinnati </span></p>
                       </div>
                     </div>
+
+                    <!-- DOWNLOAD RESUME CUT OUT? -->
                     <!-- <div class="row">
                                 <div class="buttons padd-15">
                                     <a href="#" class="btn">Download CV</a>
