--- a/index.html
+++ b/index.html
@@ -273,16 +273,13 @@
                               Java Development Bootcamp Student - Tech Elevator
                             </h4>
                             <p class="timeline-text">
-                              A full stack Java coding bootcamp to learn how to
-                              develop dynamic web-based software systems using
-                              the Java programming language and platform with
-                              800+ hours of lecture and application including:
-                              Object-Oriented Programming: Java Web Application
-                              Development: HTML, CSS, JavaScript, Spring Boot,
-                              Vue.js Database Programming: JDBC, Table Design,
-                              SQL, PostgreSQL, E/R diagrams Development Tools
-                              and Techniques: Agile, Unit Testing (JUnit),
-                              Integration Testing, Git, IntelliJ
+                              Tech Elevator. A full stack Java coding bootcamp to learn how to 
+develop dynamic web-based software systems using the Java programming language and platform 
+with 800+ hours of lecture and application. Course included Object-Oriented Programming in Java; 
+Web Application Development utilizing HTML, CSS, JavaScript, Spring Boot, and Vue.js; Database 
+Programming in JDBC, Table Design, SQL, PostgreSQL, and E/R diagrams; and Development Tools 
+and Techniques with Agile, Unit Testing (JUnit), Integration Testing, Git, and IntelliJ.
+J
                             </p>
                           </div>
                           <!-- === timeline item=== -->
@@ -321,25 +318,9 @@
                               Center
                             </h4>
                             <p class="timeline-text">
-                              Led and trained a team of 55+ BHTs and 20
-                              Supervisors, fostering their success through
-                              dedicated support. Managed maintenance,
-                              cleanliness, and safety across 4 houses, 25
-                              apartment units, and 10 vehicles. Introduced
-                              automated data collection systems, enabling
-                              targeted improvements in operational efficiency.
-                              Demonstrated strong communication, observational,
-                              and written skills, showcasing proficiency in
-                              conveying information effectively. In-depth
-                              knowledge of State and Federal statutes related to
-                              patient confidentiality laws, ensuring adherence
-                              to legal and ethical standards in healthcare.
-                              Expertise in addiction-related matters, including
-                              knowledge of the 12-Step Recovery Program, ability
-                              to interact within a multidisciplinary team, and
-                              competence in handling various aspects of recovery
-                              programs, emphasizing physical health and holistic
-                              well-being
+                              Oversaw behavior health care program providing substance abuse treatment. Led team of 55 
+behavioral health technicians across five facilities. Directly supervised 20 direct report supervisors. 
+Managed facilities and vehicles. 
                             </p>
                           </div>
                           <!-- === timeline item === -->
@@ -352,19 +333,9 @@
                               Operations Director - Firsthand Health
                             </h4>
                             <p class="timeline-text">
-                              Manage financial resources and cultivate strong
-                              connections with community stakeholders and
-                              resources to ensure a comprehensive and effective
-                              directory Establishing and nurturing partnerships
-                              with local companies to cultivate and maintain
-                              positive business relationships. Act as a
-                              player-coach, engaging in outreach activities with
-                              the Guides team, facilitating access to community
-                              resources and services like SSA benefits, housing,
-                              food, and other support programs. Offer clinical
-                              guidance to staff pursuing licensure when needed.
-                              Foster an inclusive and equitable workplace for a
-                              diverse team.
+                              Led a team of Guides who connect individuals with essential social, behavioral, and health 
+resources. Provided clinical guidance, led outreach, trained new team members, and collaborated 
+with community partners. 
                             </p>
                           </div>
                           <!-- === timeline item === -->
@@ -377,17 +348,11 @@
                               Housing Program Director - Decoach Rehab Center
                             </h4>
                             <p class="timeline-text">
-                              Provided professional coaching to team members,
-                              enabling them to implement effective productivity
-                              strategies to achieve ambitious objectives. Led
-                              and oversaw comprehensive program development from
-                              inception to successful implementation.
-                              Orchestrated smooth and efficient program
-                              development by collaborating cross functionally
-                              across departments Directed team of 25 personnel,
-                              60 clients, overseeing records, performance and
-                              quality assurance. Offered continuous guidance and
-                              leadership in overseeing program operations.
+                              Led a 25-member team within a substance abuse facility, ensuring the highest quality of patient 
+care and accurate record-keeping practices. Strong collaboration across departments to drive 
+improvements in program development. Provided leadership and guidance to staff, modeling best 
+practices, and maintaining clear communication channels even in high-pressure situations.
+● Analyzed and redesigned production workflow, eliminating redundancies and bottlenecks.
                             </p>
                           </div>
                         </div>
