light mode  added will to menu

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- ==== menu start ==== -->
     <div class="menu">
       <div class="logo">
-        <a href="#">TTD</a>
+        <a href="#">Will</a>
         
       </div>
       <div class="nav-toggler">
