--- a/index.html
+++ b/index.html
@@ -445,13 +445,17 @@ Managed facilities and vehicles.
             </div>
             <!-- === portfolio item end === -->
             <!-- === portfolio item start === -->
-            <!-- <div class="portfolio-item padd-15">
+
+            <div class="portfolio-item padd-15">
+              <div class="portfolio-heading padd-15">
+                <h2>The Tech Dad Web Page</h2>
+              </div>
                         <div class="portfolio-item-inner shadow-dark">
                             <div class="portfolio-img">
-                                <img src="images/Screenshot (4).png" alt="">
+                                <img src="images/techdadsite.png" alt="">
                             </div>
                         </div>
-                    </div> -->
+                    </div>
             <!-- === portfolio item end === -->
           </div>
         </div>
