--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@ Managed facilities and vehicles.
               </div>
                         <div class="portfolio-item-inner shadow-dark">
                             <div class="portfolio-img">
-                                <img src="images/techdadsite.png" alt="">
+                                <a href="https://techdad87.com/"><img src="images/techdadsite.png" alt=""></a>
                             </div>
                         </div>
                     </div>
