--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>William Rays Portfolio</title>
-  <link rel="icon" href="images/logo.png.png" />
+  <link rel="icon" href="images/Will.png" />
   <link rel="stylesheet" href="css/styles.css" />
   <link rel="stylesheet" href="css/skins/color1.css" />
-  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"> -->
-
+  
   <!--===== Style Switcher ==== -->
   <link rel="stylesheet" href="css/skins/color1.css" class="alternate-style" title="color-1" disabled />
   <link rel="stylesheet" href="css/skins/color2.css" class="alternate-style" title="color-2" disabled />
